--- a/circle.yml
+++ b/circle.yml
@@ -6,10 +6,10 @@ dependencies:
     - curl -o $HOME/go_appengine_1.9.40.zip https://storage.googleapis.com/appengine-sdks/featured/go_appengine_sdk_linux_amd64-1.9.40.zip
     - unzip -q -d $HOME $HOME/go_appengine_1.9.40.zip
   override:
-    - $HOME/go_appengine/goapp build
+    - $HOME/go_appengine/goapp build ./app/
 test:
   override:
-    - $HOME/go_appengine/goapp test
+    - $HOME/go_appengine/goapp test -v ./app/
 deployment:
   appengine:
     branch: master
