--- a/circle.yml
+++ b/circle.yml
@@ -11,7 +11,9 @@ test:
   override:
     - $HOME/go_appengine/goapp test -v ./app/
 deployment:
+  pre:
+    - openssl aes-256-cbc -d -in app/secret-cipher -k $SECRET_KEY > test.json
   appengine:
     branch: master
     commands:
-      -  $HOME/go_appengine/appcfg.py --oauth2_refresh_token=$APPENGINE_TOKEN update app/
+      - $HOME/go_appengine/appcfg.py update . --oauth2_access_token $(tools/gtoken --json test.json)
