fix gtoken path

--- a/circle.yml
+++ b/circle.yml
@@ -15,4 +15,4 @@ deployment:
     branch: master
     commands:
       - openssl aes-256-cbc -d -in app/secret-cipher -k $SECRET_KEY > test.json
-      - $HOME/go_appengine/appcfg.py update . --oauth2_access_token $(tools/gtoken --json test.json)
+      - $HOME/go_appengine/appcfg.py update . --oauth2_access_token $(./tools/gtoken --json test.json)
