--- a/circle.yml
+++ b/circle.yml
@@ -6,6 +6,7 @@ dependencies:
     - curl -o $HOME/go_appengine_1.9.40.zip https://storage.googleapis.com/appengine-sdks/featured/go_appengine_sdk_linux_amd64-1.9.40.zip
     - unzip -q -d $HOME $HOME/go_appengine_1.9.40.zip
   override:
+    - go get golang.org/x/tools/godoc
     - $HOME/go_appengine/goapp get -t -d -v  ./app/...
 test:
   pre:
