--- a/circle.yml
+++ b/circle.yml
@@ -1,22 +1,11 @@
-machine:
-  timezone:
-    Asia/Tokyo
-dependencies:
-  pre:
-    - curl -o $HOME/go_appengine_1.9.40.zip https://storage.googleapis.com/appengine-sdks/featured/go_appengine_sdk_linux_amd64-1.9.40.zip
-    - unzip -q -d $HOME $HOME/go_appengine_1.9.40.zip
-  override:
-    - go get golang.org/x/tools/godoc
-    - $HOME/go_appengine/goapp get -t -d -v  ./app/...
-test:
-  pre:
-    - go get -u github.com/jstemmer/go-junit-report
-    - mkdir -p $CIRCLE_TEST_REPORTS/golang  
-  override:
-    - $HOME/go_appengine/goapp test -v ./app/ | $GOPATH/bin/go-junit-report > $CIRCLE_TEST_REPORTS/golang/junit.xml
-deployment:
-  appengine:
-    branch: master
-    commands:
-      - openssl aes-256-cbc -d -in app/secret-cipher -k $SECRET_KEY > test.json
-      - $HOME/go_appengine/appcfg.py update ./app/ --oauth2_access_token $(./tools/gtoken_linux_amd64 --json test.json)
+version: 2
+jobs:
+  build:
+    working_directory: ~/sample_goapp
+    docker:
+      - image: criff/goapp-docker
+    steps:
+      - checkout
+      - run:
+          name: run test
+          command: goapp test ./...
