--- a/circle.yml
+++ b/circle.yml
@@ -1,12 +1,18 @@
 version: 2
 jobs:
   build:
-    working_directory: /go/src/github.com/crifff/gae-sample
+    working_directory: /gopath/src/github.com/crifff/gae-sample
     docker:
-      - image: golang:1.6.3
+      - image: 1.6.3-alpine
+        environment:
+          PROJECT_ROOT: /gopath/src/github.com/crifff/gae-sample
+          PATH: "${PATH}:${GOPATH}/bin:/go_appengine/bin:${PROJECT_ROOT}/node_modules/.bin"
     steps:
       - checkout
+      - run:
+          name: install SDK
+          command: curl -o $HOME/go_appengine_1.9.48.zip https://storage.googleapis.com/appengine-sdks/featured/go_appengine_sdk_linux_amd64-1.9.48.zip && unzip -q -d / $HOME/go_appengine_1.9.48.zip
       - run: echo $GOPATH
       - run:
           name: run test
-          command: go test ./...
+          command: goapp test ./...
