--- a/circle.yml
+++ b/circle.yml
@@ -3,7 +3,7 @@ jobs:
   build:
     working_directory: /go/src/github.com/crifff/gae-sample
     docker:
-      - image: circleci/cci-demo-go-primary:0.0.2
+      - image: ubuntu
         environment:
           PROJECT_ROOT: /go/src/github.com/crifff/gae-sample
           PATH: "${PATH}:${GOPATH}/bin:/go_appengine/bin:${PROJECT_ROOT}/node_modules/.bin"
